--- a/public/css/main.css
+++ b/public/css/main.css
@@ -285,3 +285,27 @@
 {
     margin-top: 100vh !important;
 }
+
+/*  Confirm_Page CSS: Start */
+
+.left_roundet_box
+{
+    border-radius: 6px 0 0 6px;
+}
+
+.right_roundet_box
+{
+    border-radius: 0 6px 6px 0;
+}
+
+.box_shadow
+{
+    box-shadow: 13px 14px 24px -1px rgba(0, 0, 0, 0.25);
+}
+
+.bg_lila
+{
+    background: var(--lila);
+}
+
+/*  Confirm_Page CSS: END */
